--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.2.0",
     "@tailwindcss/forms": "^0.5.5",
     "@types/node": "20.4.4",
     "@types/react": "18.2.16",
@@ -24,6 +25,7 @@
     "next": "13.4.12",
     "next-auth": "^4.23.1",
     "postcss": "8.4.27",
+    "prisma": "^5.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
